made two separate containers for text and contact form which fixed the overlapping of form on top of text. now need to figure out how to position form to the left

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,6 +1,10 @@
 .contact-form {
     width: 100%;
-    margin-top: 20px;
+    // margin-top: 20px;
+    // float: left;
+    position: absolute;
+    left: 15px;
+    top: 0; /* Adjust top position as needed */
 
     ul {
         padding: 0;
@@ -36,7 +40,7 @@
     input[type= 'email'] {
         width: 100%;
         border: 0;
-        background: rgba(153, 155, 29, 0.356);
+        background: #dbcd0ef5;
         height: 35px;
         font-size: 16px;
         color: white;
@@ -74,3 +78,12 @@
         }
     }
 }
+
+.container.contact-page {
+    position: relative;
+}
+
+.text-zone {
+    width: 100%;
+}
+
